Test if custom theme works

--- a/_sass/color_schemes/own.scss
+++ b/_sass/color_schemes/own.scss
@@ -1,6 +1,6 @@
 
 $body-background-color: $grey-lt-000;
-$sidebar-color: $red-300;
+$sidebar-color: $centria-red;
 $border-color: $red-200;
 
 $body-text-color: $grey-dk-300;
