--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -54,16 +54,16 @@ $red-300: #e30615;
 
 // edit these for colors
 $body-background-color: $grey-lt-000;
-$sidebar-color: $red-300;
+$sidebar-color: #e30615;
 $search-background-color: $white;
 $table-background-color: $white;
-$code-background-color: $grey-lt-000;
+$code-background-color: $grey-lt-300;
 
 $body-text-color: $grey-dk-100;
 $body-heading-color: $grey-dk-300;
 $search-result-preview-color: $grey-dk-000;
-$nav-child-link-color: $grey-dk-100;
-$link-color: $purple-000;
+$nav-child-link-color: #f8f8f8;
+$link-color: #f8f8f8;
 $btn-primary-color: $purple-100;
 $base-button-color: #f7f7f7;
 
