--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -63,7 +63,7 @@ $body-text-color: $grey-dk-100;
 $body-heading-color: $grey-dk-300;
 $search-result-preview-color: $grey-dk-000;
 $nav-child-link-color: #f8f8f8;
-$link-color: #f8f8f8;
+$link-color: $blue-300;
 $btn-primary-color: $purple-100;
 $base-button-color: #f7f7f7;
 
