--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -110,13 +110,13 @@ $base-button-color: #f7f7f7;
 //// Grid system
 ////
 
-$gutter-spacing: $sp-6;
-$gutter-spacing-sm: $sp-4;
-$nav-width: 264px;
-$nav-width-md: 248px;
-$content-width: 800px;
-$header-height: 60px;
-$search-results-width: 500px;
+//$gutter-spacing: $sp-6;
+//$gutter-spacing-sm: $sp-4;
+//$nav-width: 264px;
+//$nav-width-md: 248px;
+//$content-width: 800px;
+//$header-height: 60px;
+//$search-results-width: 500px;
 
 ////
 //// Media queries in pixels
