--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -62,7 +62,7 @@ $code-background-color: $grey-lt-300;
 $body-text-color: $grey-dk-100;
 $body-heading-color: $grey-dk-300;
 $search-result-preview-color: $grey-dk-000;
-$nav-child-link-color: #f8f8f8;
+$nav-child-link-color: $grey-dk-200;
 $link-color: $grey-dk-200;
 $btn-primary-color: $purple-100;
 $base-button-color: #f7f7f7;
