--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -17,7 +17,8 @@ $white: #fff;
 
 $grey-dk-000: #959396;
 $grey-dk-100: #5c5962;
-$grey-dk-200: #44434d;
+// BLACK
+$grey-dk-200: #000000;
 $grey-dk-250: #302d36;
 $grey-dk-300: #27262b;
 
